ExpressRoute/defaultNetworkSecurityGroups.json
{
	"$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
	"contentVersion": "1.0.0.0",
	"parameters": {
	},
	"variables": {
	},
	"resources": [{
		"apiVersion": "2015-05-01-preview",
		"type": "Microsoft.Network/networkSecurityGroups",
		"name": "defaultWinNSG",
		"location": "[resourceGroup().location]",
		"properties": {
			"securityRules": [{
				"name": "allow-rdp",
				"properties": {
					"description": "Allows RDP traffic",
					"protocol": "Tcp",
					"sourcePortRange": "*",
					"destinationPortRange": "3389",
					"sourceAddressPrefix": "*",
					"destinationAddressPrefix": "*",
					"access": "Allow",
					"priority": 100,
					"direction": "Inbound"
				}
			},
			{
				"name": "allow-http",
				"properties": {
					"description": "Allow WEB",
					"protocol": "Tcp",
					"sourcePortRange": "*",
					"destinationPortRange": "80",
					"sourceAddressPrefix": "*",
					"destinationAddressPrefix": "*",
					"access": "Allow",
					"priority": 200,
					"direction": "Inbound"
				}
			},
			{
			"name": "allow-https",
			"properties": {
				"description": "Allow secure WEB",
				"protocol": "Tcp",
				"sourcePortRange": "*",
				"destinationPortRange": "443",
				"sourceAddressPrefix": "*",
				"destinationAddressPrefix": "*",
				"access": "Allow",
				"priority": 300,
				"direction": "Inbound"
			}
		}]
	}
},
{
		"apiVersion": "2015-05-01-preview",
		"type": "Microsoft.Network/networkSecurityGroups",
		"name": "defaultLinNSG",
		"location": "[resourceGroup().location]",
		"properties": {
			"securityRules": [{
				"name": "allow-ssh",
				"properties": {
					"description": "Allows SSH traffic",
					"protocol": "Tcp",
					"sourcePortRange": "*",
					"destinationPortRange": "22",
					"sourceAddressPrefix": "*",
					"destinationAddressPrefix": "*",
					"access": "Allow",
					"priority": 100,
					"direction": "Inbound"
				}
			},
			{
				"name": "allow-http",
				"properties": {
					"description": "Allow WEB",
					"protocol": "Tcp",
					"sourcePortRange": "*",
					"destinationPortRange": "80",
					"sourceAddressPrefix": "*",
					"destinationAddressPrefix": "*",
					"access": "Allow",
					"priority": 200,
					"direction": "Inbound"
				}
			},
			{
			"name": "allow-https",
			"properties": {
				"description": "Allow secure WEB",
				"protocol": "Tcp",
				"sourcePortRange": "*",
				"destinationPortRange": "443",
				"sourceAddressPrefix": "*",
				"destinationAddressPrefix": "*",
				"access": "Allow",
				"priority": 300,
				"direction": "Inbound"
			}
		}]
	}
}]
}
